Fix text-align; justify

--- a/DESAFIO/style.css
+++ b/DESAFIO/style.css
@@ -37,8 +37,10 @@ main{
     background-color: white;
     max-width: 900px;
     width: auto;
+    text-align: justify;
     margin: 0 auto 0 auto;
     padding-left: 15px;
+    padding-right: 15px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
      
